# nekogallery

./: Cargo.toml  README.md  insert_db_fixture.py  sqlite.db
gallery/: go.mod  main.go
gallery/server/: config.go  server.go
gallery/server/middleware/: log.go
gallery/utils/logger/: logger.go
src/: app.rs  main.rs
src/app/: cat.rs  error.rs  route.rs
src/dependencies/: db.rs
