[package]
name = "neko"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["json", "macros"] }
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
